--- a/n8n.yaml
+++ b/n8n.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: jenkins
+  name: n8n
   namespace: argocd
 spec:
   project: default
   source:
-    repoURL: https://github.com/Ineb01/kubernetes-jenkins.git
+    repoURL: https://github.com/Ineb01/kubernetes-n8n.git
     path: .
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
-    namespace: applications
+    namespace: n8n
   syncPolicy:
     automated:
       prune: true
