--- a/wordpress.yml
+++ b/wordpress.yml
@@ -3,18 +3,31 @@ kind: Application
 metadata:
   name: wordpress
   namespace: argocd
+  labels:
+    app.kubernetes.io/name: wordpress
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
-    repoURL: https://github.com/Ineb01/wordpress.git
-    path: .
+    repoURL: https://github.com/Ineb01/wordpress
     targetRevision: HEAD
+    path: manifests
   destination:
     server: https://kubernetes.default.svc
-    namespace: applications
+    namespace: wordpress
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
+      allowEmpty: false
     syncOptions:
-      - Replace=true
+      - CreateNamespace=true
+      - PrunePropagationPolicy=foreground
+      - PruneLast=true
+    retry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m
