--- a/wordpress.yml
+++ b/wordpress.yml
@@ -12,6 +12,7 @@ spec:
   sources:
     - repoURL: https://charts.bitnami.com/bitnami
       chart: wordpress
+      targetRevision: 26.0.0
       helm:
         valueFiles:
           - $values/values.yaml
