Update WordPress chart repository URL

--- a/wordpress.yml
+++ b/wordpress.yml
@@ -10,7 +10,7 @@ metadata:
 spec:
   project: default
   sources:
-    - repoURL: https://charts.bitnami.com/bitnami
+    - repoURL: registry-1.docker.io/bitnamicharts
       chart: wordpress
       targetRevision: 26.0.0
       helm:
